--working on the updates for the search API
